tablegen-parser/src/snapshots/tablegen_parser__parser__tests__class.snap
---
source: tablegen-parser/src/parser.rs
expression: "parse(\"class Foo<int A, int B>;\")"
---
SyntaxNode(
    Node(
        Class,
        [
            SyntaxNode(
                Token(
                    Class,
                    "class",
                ),
            ),
            SyntaxNode(
                Token(
                    Whitespace,
                    " ",
                ),
            ),
            SyntaxNode(
                Node(
                    Identifier,
                    [
                        SyntaxNode(
                            Token(
                                Id,
                                "Foo",
                            ),
                        ),
                    ],
                ),
            ),
            SyntaxNode(
                Node(
                    TemplateArgList,
                    [
                        SyntaxNode(
                            Token(
                                Less,
                                "<",
                            ),
                        ),
                        SyntaxNode(
                            Node(
                                TemplateArgDecl,
                                [
                                    SyntaxNode(
                                        Node(
                                            Type,
                                            [
                                                SyntaxNode(
                                                    Token(
                                                        Int,
                                                        "int",
                                                    ),
                                                ),
                                                SyntaxNode(
                                                    Token(
                                                        Whitespace,
                                                        " ",
                                                    ),
                                                ),
                                            ],
                                        ),
                                    ),
                                    SyntaxNode(
                                        Node(
                                            Identifier,
                                            [
                                                SyntaxNode(
                                                    Token(
                                                        Id,
                                                        "A",
                                                    ),
                                                ),
                                            ],
                                        ),
                                    ),
                                ],
                            ),
                        ),
                        SyntaxNode(
                            Token(
                                Comma,
                                ",",
                            ),
                        ),
                        SyntaxNode(
                            Token(
                                Whitespace,
                                " ",
                            ),
                        ),
                        SyntaxNode(
                            Node(
                                TemplateArgDecl,
                                [
                                    SyntaxNode(
                                        Node(
                                            Type,
                                            [
                                                SyntaxNode(
                                                    Token(
                                                        Int,
                                                        "int",
                                                    ),
                                                ),
                                                SyntaxNode(
                                                    Token(
                                                        Whitespace,
                                                        " ",
                                                    ),
                                                ),
                                            ],
                                        ),
                                    ),
                                    SyntaxNode(
                                        Node(
                                            Identifier,
                                            [
                                                SyntaxNode(
                                                    Token(
                                                        Id,
                                                        "B",
                                                    ),
                                                ),
                                            ],
                                        ),
                                    ),
                                ],
                            ),
                        ),
                        SyntaxNode(
                            Token(
                                Greater,
                                ">",
                            ),
                        ),
                    ],
                ),
            ),
            SyntaxNode(
                Token(
                    Semi,
                    ";",
                ),
            ),
        ],
    ),
)
