tablegen-parser/src/snapshots/tablegen_parser__parser__tests__class_with_body.snap
---
source: tablegen-parser/src/parser.rs
expression: "parse(\"class Foo<int A> {\n                int B;\n                int C = A;\n            }\")"
---
SyntaxNode(
    Node(
        Class,
        [
            SyntaxNode(
                Token(
                    Class,
                    "class",
                ),
            ),
            SyntaxNode(
                Token(
                    Whitespace,
                    " ",
                ),
            ),
            SyntaxNode(
                Node(
                    Identifier,
                    [
                        SyntaxNode(
                            Token(
                                Id,
                                "Foo",
                            ),
                        ),
                    ],
                ),
            ),
            SyntaxNode(
                Node(
                    TemplateArgList,
                    [
                        SyntaxNode(
                            Token(
                                Less,
                                "<",
                            ),
                        ),
                        SyntaxNode(
                            Node(
                                TemplateArgDecl,
                                [
                                    SyntaxNode(
                                        Node(
                                            Type,
                                            [
                                                SyntaxNode(
                                                    Token(
                                                        Int,
                                                        "int",
                                                    ),
                                                ),
                                                SyntaxNode(
                                                    Token(
                                                        Whitespace,
                                                        " ",
                                                    ),
                                                ),
                                            ],
                                        ),
                                    ),
                                    SyntaxNode(
                                        Node(
                                            Identifier,
                                            [
                                                SyntaxNode(
                                                    Token(
                                                        Id,
                                                        "A",
                                                    ),
                                                ),
                                            ],
                                        ),
                                    ),
                                ],
                            ),
                        ),
                        SyntaxNode(
                            Token(
                                Greater,
                                ">",
                            ),
                        ),
                        SyntaxNode(
                            Token(
                                Whitespace,
                                " ",
                            ),
                        ),
                    ],
                ),
            ),
            SyntaxNode(
                Node(
                    RecordBody,
                    [
                        SyntaxNode(
                            Node(
                                ParentClassList,
                                [],
                            ),
                        ),
                        SyntaxNode(
                            Node(
                                Body,
                                [
                                    SyntaxNode(
                                        Token(
                                            LBrace,
                                            "{",
                                        ),
                                    ),
                                    SyntaxNode(
                                        Token(
                                            Whitespace,
                                            "\n                ",
                                        ),
                                    ),
                                    SyntaxNode(
                                        Node(
                                            BodyItem,
                                            [
                                                SyntaxNode(
                                                    Node(
                                                        Type,
                                                        [
                                                            SyntaxNode(
                                                                Token(
                                                                    Int,
                                                                    "int",
                                                                ),
                                                            ),
                                                            SyntaxNode(
                                                                Token(
                                                                    Whitespace,
                                                                    " ",
                                                                ),
                                                            ),
                                                        ],
                                                    ),
                                                ),
                                                SyntaxNode(
                                                    Node(
                                                        Identifier,
                                                        [
                                                            SyntaxNode(
                                                                Token(
                                                                    Id,
                                                                    "B",
                                                                ),
                                                            ),
                                                        ],
                                                    ),
                                                ),
                                                SyntaxNode(
                                                    Token(
                                                        Semi,
                                                        ";",
                                                    ),
                                                ),
                                                SyntaxNode(
                                                    Token(
                                                        Whitespace,
                                                        "\n                ",
                                                    ),
                                                ),
                                            ],
                                        ),
                                    ),
                                    SyntaxNode(
                                        Node(
                                            BodyItem,
                                            [
                                                SyntaxNode(
                                                    Node(
                                                        Type,
                                                        [
                                                            SyntaxNode(
                                                                Token(
                                                                    Int,
                                                                    "int",
                                                                ),
                                                            ),
                                                            SyntaxNode(
                                                                Token(
                                                                    Whitespace,
                                                                    " ",
                                                                ),
                                                            ),
                                                        ],
                                                    ),
                                                ),
                                                SyntaxNode(
                                                    Node(
                                                        Identifier,
                                                        [
                                                            SyntaxNode(
                                                                Token(
                                                                    Id,
                                                                    "C",
                                                                ),
                                                            ),
                                                            SyntaxNode(
                                                                Token(
                                                                    Whitespace,
                                                                    " ",
                                                                ),
                                                            ),
                                                        ],
                                                    ),
                                                ),
                                                SyntaxNode(
                                                    Token(
                                                        Equal,
                                                        "=",
                                                    ),
                                                ),
                                                SyntaxNode(
                                                    Token(
                                                        Whitespace,
                                                        " ",
                                                    ),
                                                ),
                                                SyntaxNode(
                                                    Node(
                                                        Value,
                                                        [
                                                            SyntaxNode(
                                                                Node(
                                                                    SimpleValue,
                                                                    [
                                                                        SyntaxNode(
                                                                            Node(
                                                                                Identifier,
                                                                                [
                                                                                    SyntaxNode(
                                                                                        Token(
                                                                                            Id,
                                                                                            "A",
                                                                                        ),
                                                                                    ),
                                                                                ],
                                                                            ),
                                                                        ),
                                                                    ],
                                                                ),
                                                            ),
                                                        ],
                                                    ),
                                                ),
                                                SyntaxNode(
                                                    Token(
                                                        Semi,
                                                        ";",
                                                    ),
                                                ),
                                                SyntaxNode(
                                                    Token(
                                                        Whitespace,
                                                        "\n            ",
                                                    ),
                                                ),
                                            ],
                                        ),
                                    ),
                                    SyntaxNode(
                                        Token(
                                            RBrace,
                                            "}",
                                        ),
                                    ),
                                ],
                            ),
                        ),
                    ],
                ),
            ),
        ],
    ),
)
